# competitive-programming

./: .gitignore  Makefile  README.md  pyproject.toml  tidy.py
contests/Codeforces_Round_1095_Div_2/: A_Disturbing_Distribution.py  B_Everything_Everywhere.py  C_Mental_Monumental_Easy_Version.py
contests/Codeforces_Round_1095_Div_2/.cph/: .A_Disturbing_Distribution.py_d836cd90582fb50c87e875062604ce25.prob  .B_Everything_Everywhere.py_bf35767ce20f82fdd0e5e86c830e31c6.prob  .C_Mental_Monumental_Easy_Version.py_50771e748b701ac58235443cfdc9b339.prob
contests/Codeforces_Round_1096_Div_3/: A_Koshary.py  B_Party_Monster.py  C_Snowfall.py  D_Palindromex.py  E_It_All_Went_Sideways.py  F_It_Just_Keeps_Going_Sideways.py
contests/Codeforces_Round_1096_Div_3/.cph/: .A_Koshary.py_ae1baee82628c79810a3e4e359ce423b.prob  .B_Party_Monster.py_18397de9372cfd8424066a8b436a64e6.prob  .C_Snowfall.py_0eb0a6aaef1585fa963b833143b20a2f.prob  .D_Palindromex.py_50dfa2c7b45401e48d6cadb8cd5b66e8.prob  .E_It_All_Went_Sideways.py_5a8104e72af6e5700605f48199c3fc1d.prob  .F_It_Just_Keeps_Going_Sideways.py_3b7f4fd3dbea87263ea8775dd176f42d.prob
contests/SpectralCup_2026_Round_1_Codeforces_Round_1094_Div_1_Div_2/: A_A_Wonderful_Contest.py  B_Artistic_Balance_Tree.py  C_Median_Partition.py
hackpack/: data_structures.py  graph.py  math.py  strings.py
hackpack/data_structures/: dsu.py  fenwick.py  segment_tree.py
hackpack/graph/: shortest_path.py  traversal.py
hackpack/math/: binary_search.py  minkowski_sum.py  number_theory.py
hackpack/string/: algorithms.py
templates/: template.py
(+3 files in other folders)
